--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 
 <footer>
   <div class="footer-links">
-    <p>Contact: <a href="mailto:smartstuffstays@gmail.com">lifeloggerz.official@gmail.com</a></p>
+    <p>Contact: <a href="mailto:lifeloggerz.official@gmail.com">lifeloggerz.official@gmail.com</a></p>
   </div>
   <p class="copyright">&copy; {today.getFullYear()} LifeLoggerz. All rights reserved.</p>
 </footer>
