--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -27,7 +27,7 @@ const {
   heroImage,
   wide = false,
   heroImageStyle,
-  showViews = true,
+  showViews = false,
   heroVideo
 } = Astro.props as Props;
 
