--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const posts = rawPosts
             LifeLoggerz
           </h1>
           <p style="opacity:.8; font-size:1.125rem;">
-            Systems, templates, and experiments in hyper-efficient living.
+            Systems, templates, and experiments in hyper-efficient living
           </p>
         </section>
 
