--- a/src/components/SeeAllPill.astro
+++ b/src/components/SeeAllPill.astro
@@ -59,4 +59,11 @@ const { href, label = 'See all posts', ariaLabel } = Astro.props;
     font-size: 1.1em;
     line-height: 1;
   }
+
+  .see-all-pill:focus-visible {
+    outline: 2px solid #0f4cff;
+    outline-offset: 3px;
+    box-shadow: 0 0 0 3px rgba(15, 76, 255, 0.25);
+  }
+
 </style>
